tests/ui/traits/solver-cycles/cycle-via-builtin-auto-trait-impl.stderr
error[E0275]: overflow evaluating the requirement `Runtime<RootDatabase>: RefUnwindSafe`
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`cycle_via_builtin_auto_trait_impl`)
note: required because it appears within the type `RootDatabase`
  --> $DIR/cycle-via-builtin-auto-trait-impl.rs:13:8
   |
LL | struct RootDatabase {
   |        ^^^^^^^^^^^^
note: required for `RootDatabase` to implement `Database`
  --> $DIR/cycle-via-builtin-auto-trait-impl.rs:17:24
   |
LL | impl<T: RefUnwindSafe> Database for T {
   |         -------------  ^^^^^^^^     ^
   |         |
   |         unsatisfied trait bound introduced here
note: required because it appears within the type `Runtime<RootDatabase>`
  --> $DIR/cycle-via-builtin-auto-trait-impl.rs:24:8
   |
LL | struct Runtime<DB: Database> {
   |        ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
